--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -20,10 +20,8 @@
       <nav class="navbar animation2">
         <a href="../index.html" class="item first">Home</a>
         <a href="about-us.html" class="active nav-item item">About Us</a>
-        <a href="funded.html" class="nav-item item">Funded</a>
-        <a href="contact-us.html" class="nav-item item">Get Help</a>
-        <a href="sign-in.html" class="nav-button nav-item ">Sign In</a>
-        <a href="sign-up-gate.html" class="nav-button green">Sign Up</a>
+        <a href="#" class="nav-item item">Funded</a>
+        <a href="#" class="nav-item item">Get Help</a>
       </nav>
       <span class="hamm"><i class="fas ham fa-bars"></i></span>
     </div>
@@ -166,13 +164,14 @@
       </div>
       <div class="navigation">
         <h2 class="navi">Navigation</h3>
-          <a href="about-us.html">About Us</a>
-          <a href="terms-of-sponsorship.html">Terms of Sponsorship</a>
-          <a href="contact-us.html">Contact Us</a>
-          <a href="terms-of-use.html">Terms of Use</a>
-          <a href="privacy-policy.html">Privacy Policy</a>
-          <a href="faqs.html">FAQs</a>
-          <a href="funded.html">Funded</a>
+          <a href="/pages/about-us.html">About Us</a>
+                    <a href="#">Terms of Sponsorship</a>
+                    <a href="#">Contact Us</a>
+                    <a href="#">Terms of Use</a>
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">FAQs</a>
+                    <a href="#">Funded</a>
+                    <a href="/pages/contact-us.html" class="nav-item item">Get Help</a>
       </div>
       <div class="sub">
         <h5 class="sub-text">Subscribe</h5>
