--- a/pages/farmers/apply-success.html
+++ b/pages/farmers/apply-success.html
@@ -21,8 +21,8 @@
             <nav class="navbar animation2">
                 <a href="../../index.html" class="item first">Home</a>
                 <a href="../u-about-us.html" class="nav-item item">About Us</a>
-                <a href="" class="nav-item item">Funded</a>
-                <a href="" class="nav-item item">Get Help</a>
+                <a href="#" class="nav-item item">Funded</a>
+                <a href="#" class="nav-item item">Get Help</a>
                 <!-- <a href="../sign-in.html" class="nav-button nav-item ">Sign In</a>
                 <a href="../sign-up-gate.html" class="nav-button green">Sign Up</a> -->
             </nav>
@@ -55,13 +55,14 @@
             </div>
             <div class="navigation">
                 <h2 class="navi">Navigation</h3>
-                    <a href="../u-about-us.html">About Us</a>
-                    <a href="../u-terms-of-sponsorship.html">Terms of Sponsorship</a>
-                    <a href="contact.html">Contact Us</a>
-                    <a href="../u-terms-of-use.html">Terms of Use</a>
-                    <a href="../u-privacy-policy.html">Privacy Policy</a>
-                    <a href="../u-faqs.html">FAQs</a>
-                    <a href="../u-funded.html">Funded</a>
+                    <a href="/pages/about-us.html">About Us</a>
+                    <a href="#">Terms of Sponsorship</a>
+                    <a href="#">Contact Us</a>
+                    <a href="#">Terms of Use</a>
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">FAQs</a>
+                    <a href="#">Funded</a>
+                    <a href="/pages/contact-us.html" class="nav-item item">Get Help</a>
             </div>
             <div class="sub">
                 <h5 class="sub-text">Subscribe</h5>
