--- a/pages/farmers/f-profile.html
+++ b/pages/farmers/f-profile.html
@@ -19,13 +19,11 @@
     <header>
         <div class="nav-items">
             <div class="logo">
-                <a href="../../pages/homepage.html" class="logo"><img src="../../img/logoCrop.png"></a>
+                <a href="./f-dashboard.html" class="logo"><img src="../../img/logoCrop.png"></a>
             </div>
             <nav class="navbar animation3">
-                <a href="../homepage.html" class="item first">Home</a>
+                <a href="./f-dashboard.html" class="item first">Home</a>
                 <a href="../u-about-us.html" class="nav-item item">About Us</a>
-                <a href="../u-funded.html" class="nav-item item">Funded</a>
-                <a href="../farmers/contact.html" class="nav-item item">Get Help</a>
                 <a href="f-profile.html"><img class="profile-img" src="../../img/profile-img.svg" alt="profile-img"></a>
             </nav>
             <span class="hamm"><i class="fas ham fa-bars"></i></span>
@@ -54,7 +52,7 @@
             <!-- <a href="" class="nav-item item ditem a">Investors</a> -->
             <!-- <a href="#index.html" class="nav-item item a">Training</a>
             <a href="#index.html" class="nav-item item a">Mentorship</a> -->
-            <a href="../u-faqs.html" class="nav-item item ditem a">FAQs</a>
+            <a href="#" class="nav-item item ditem a">FAQs</a>
             <button class=" dashb nav-item item a last">Log Out</button>
         </aside>
         <main class="main">
@@ -126,13 +124,14 @@
             </div>
             <div class="navigation">
                 <h2 class="navi">Navigation</h3>
-                    <a href="../u-about-us.html">About Us</a>
-                    <a href="../u-terms-of-sponsorship.html">Terms of Sponsorship</a>
-                    <a href="contact.html">Contact Us</a>
-                    <a href="../u-terms-of-use.html">Terms of Use</a>
-                    <a href="../u-privacy-policy.html">Privacy Policy</a>
-                    <a href="../u-faqs.html">FAQs</a>
-                    <a href="../u-funded.html">Funded</a>
+                    <a href="/pages/about-us.html">About Us</a>
+                    <a href="#">Terms of Sponsorship</a>
+                    <a href="#">Contact Us</a>
+                    <a href="#">Terms of Use</a>
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">FAQs</a>
+                    <a href="#">Funded</a>
+                    <a href="/pages/contact-us.html" class="nav-item item">Get Help</a>
             </div>
             <div class="sub">
                 <h5 class="sub-text">Subscribe</h5>
