--- a/pages/farmers/register-success.html
+++ b/pages/farmers/register-success.html
@@ -21,8 +21,8 @@
             <nav class="navbar animation2">
                 <a href="../../index.html" class="active item">Home</a>
                 <a href="../u-about-us.html" class="nav-item item">About Us</a>
-                <a href="" class="nav-item item">Funded</a>
-                <a href="" class="nav-item item">Get Help</a>
+                <a href="#" class="nav-item item">Funded</a>
+                <a href="#" class="nav-item item">Get Help</a>
             </nav>
             <span class="hamm"><i class="fas ham fa-bars"></i></span>
         </div>
@@ -51,13 +51,14 @@
             </div>
             <div class="navigation">
                 <h2 class="navi">Navigation</h3>
-                    <a href="">About Us</a>
-                    <a href="">Terms of Sponsorship</a>
-                    <a href="">Contact Us</a>
-                    <a href="">Terms of Use</a>
-                    <a href="">Privacy Policy</a>
-                    <a href="">FAQs</a>
-                    <a href="">Funded</a>
+                    <a href="/pages/about-us.html">About Us</a>
+                    <a href="#">Terms of Sponsorship</a>
+                    <a href="#">Contact Us</a>
+                    <a href="#">Terms of Use</a>
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">FAQs</a>
+                    <a href="#">Funded</a>
+                    <a href="/pages/contact-us.html" class="nav-item item">Get Help</a>
             </div>
             <div class="sub">
                 <h5 class="sub-text">Subscribe</h5>
