--- a/pages/funded.html
+++ b/pages/funded.html
@@ -23,10 +23,8 @@
             <nav class="navbar animation2">
                 <a href="../index.html" class="item first">Home</a>
                 <a href="about-us.html" class="nav-item item">About Us</a>
-                <a href="" class="nav-item item active">Funded</a>
+                <a href="#" class="nav-item item active">Funded</a>
                 <a href="../pages/contact-us.html" class="nav-item item">Get Help</a>
-                <a href="../pages/sign-in.html" class="nav-button nav-item ">Sign In</a>
-                <a href="../pages/sign-up-gate.html" class="nav-button green">Sign Up</a>
             </nav>
             <span class="hamm"><i class="fas ham fa-bars"></i></span>
         </div>
