--- a/pages/u-about-us.html
+++ b/pages/u-about-us.html
@@ -21,8 +21,8 @@
                 <a href="../index.html" class="item first">Home</a>
                 <a href="../index.html" class="item">Dashboard</a>
                 <a href="about-us.html" class="nav-item item active">About Us</a>
-                <a href="" class="nav-item item">Funded</a>
-                <a href="contact-us.html" class="nav-item item">Get Help</a>
+                <a href="#" class="nav-item item">Funded</a>
+                <a href="#" class="nav-item item">Get Help</a>
                 <!-- <a href="sign-in.html" class="nav-button nav-item ">Sign In</a>
                 <a href="sign-up-gate.html" class="nav-button green">Sign Up</a> -->
             </nav>
@@ -152,13 +152,14 @@
             </div>
             <div class="navigation">
                 <h2 class="navi">Navigation</h3>
-                    <a href="../pages/about-us.html">About Us</a>
-                    <a href="">Terms of Sponsorship</a>
-                    <a href="../pages/contact-us.html">Contact Us</a>
-                    <a href="">Terms of Use</a>
-                    <a href="">Privacy Policy</a>
-                    <a href="">FAQs</a>
-                    <a href="">Funded</a>
+                    <a href="/pages/about-us.html">About Us</a>
+                    <a href="#">Terms of Sponsorship</a>
+                    <a href="#">Contact Us</a>
+                    <a href="#">Terms of Use</a>
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">FAQs</a>
+                    <a href="#">Funded</a>
+                    <a href="/pages/contact-us.html" class="nav-item item">Get Help</a>
             </div>
             <div class="sub">
                 <h5 class="sub-text">Subscribe</h5>
