--- a/pages/farmers/f-investors.html
+++ b/pages/farmers/f-investors.html
@@ -18,12 +18,12 @@
                 <a href="index.html" class="logo"><img src="../../img/logoCrop.png"></a>
             </div>
             <nav class="navbar animation2">
-                <a href="../homepage.html" class="active item">Home</a>
-                <a href="#index.html" class="nav-item item">About Us</a>
-                <a href="#index.html" class="nav-item item">Funded</a>
-                <a href="#index.html" class="nav-item item">Get Help</a>
-                <a href="#index.html" class="nav-button nav-item ">Sign In</a>
-                <a href="#index.html" class="nav-button green">Sign Up</a>
+                <a href="./f-dashboard.html" class="active item">Home</a>
+                <a href="#" class="nav-item item">About Us</a>
+                <a href="#" class="nav-item item">Funded</a>
+                <a href="#" class="nav-item item">Get Help</a>
+                <a href="#" class="nav-button nav-item ">Sign In</a>
+                <a href="#" class="nav-button green">Sign Up</a>
             </nav>
             <span class="hamm"><i class="fas ham fa-bars"></i></span>
         </div>
@@ -129,13 +129,14 @@
             </div>
             <div class="navigation">
                 <h2 class="navi">Navigation</h3>
-                    <a href="">About Us</a>
-                    <a href="">Terms of Sponsorship</a>
-                    <a href="">Contact Us</a>
-                    <a href="">Terms of Use</a>
-                    <a href="">Privacy Policy</a>
-                    <a href="">FAQs</a>
-                    <a href="">Funded</a>
+                    <a href="/pages/about-us.html">About Us</a>
+                    <a href="#">Terms of Sponsorship</a>
+                    <a href="#">Contact Us</a>
+                    <a href="#">Terms of Use</a>
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">FAQs</a>
+                    <a href="#">Funded</a>
+                    <a href="/pages/contact-us.html" class="nav-item item">Get Help</a>
             </div>
             <div class="sub">
                 <h5 class="sub-text">Subscribe</h5>
