--- a/pages/farmers/f-product-detail - new.html
+++ b/pages/farmers/f-product-detail - new.html
@@ -18,13 +18,13 @@
     <header>
         <div class="nav-items">
             <div class="logo">
-                <a href="../../pages/homepage.html" class="logo"><img src="../../img/logoCrop.png"></a>
+                <a href="./f-dashboard.html" class="logo"><img src="../../img/logoCrop.png"></a>
             </div>
             <nav class="navbar animation3">
-                <a href="../homepage.html" class="active item">Home</a>
+                <a href="./f-dashboard.html" class="active item">Home</a>
                 <a href="../u-about-us.html" class="nav-item item">About Us</a>
-                <a href="" class="nav-item item">Funded</a>
-                <a href="contact.html" class="nav-item item">Get Help</a>
+                <a href="#" class="nav-item item">Funded</a>
+                <a href="#" class="nav-item item">Get Help</a>
                 <a href="f-profile.html"><img class="profile-img" src="../../img/profile-img.svg" alt="profile-img" ></a>
             </nav>
             <span class="hamm"><i class="fas ham fa-bars"></i></span>
@@ -52,7 +52,7 @@
             <!-- <a href="" class="nav-item item a">Investors</a> -->
             <!-- <a href="#index.html" class="nav-item item a">Training</a>
             <a href="#index.html" class="nav-item item a">Mentorship</a> -->
-            <a href="../u-faqs.html" class="nav-item item a">FAQs</a>
+            <a href="#" class="nav-item item a">FAQs</a>
             <button class=" dashb nav-item item a last">Log Out</button>
         </aside>
         <main class="main">
@@ -159,13 +159,14 @@
             </div>
             <div class="navigation">
                 <h2 class="navi">Navigation</h3>
-                    <a href="">About Us</a>
-                    <a href="">Terms of Sponsorship</a>
-                    <a href="">Contact Us</a>
-                    <a href="">Terms of Use</a>
-                    <a href="">Privacy Policy</a>
-                    <a href="">FAQs</a>
-                    <a href="">Funded</a>
+                    <a href="/pages/about-us.html">About Us</a>
+                    <a href="#">Terms of Sponsorship</a>
+                    <a href="#">Contact Us</a>
+                    <a href="#">Terms of Use</a>
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">FAQs</a>
+                    <a href="#">Funded</a>
+                    <a href="/pages/contact-us.html" class="nav-item item">Get Help</a>
             </div>
             <div class="sub">
                 <h5 class="sub-text">Subscribe</h5>
