--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -21,8 +21,6 @@
             <nav class="navbar animation2">
                 <a href="homepage.html" class="active item">Home</a>
                 <a href="about-us.html" class="nav-item item">About Us</a>
-                <a href="u-funded.html" class="nav-item item">Funded</a>
-                <a href="../pages/farmers/contact.html" class="nav-item item">Get Help</a>
                 <a href=""><img class="profile-img" src="../img/profile-img.svg" alt="profile-img"></a>
             </nav>
             <span class="hamm"><i class="fas ham fa-bars"></i></span>
@@ -132,13 +130,14 @@
             </div>
             <div class="navigation">
                 <h2 class="navi">Navigation</h3>
-                    <a href="u-about-us.html">About Us</a>
-                    <a href="u-terms-of-sponsorship.html">Terms of Sponsorship</a>
-                    <a href="contact-us.html">Contact Us</a>
-                    <a href="u-terms-of-use.html">Terms of Use</a>
-                    <a href="u-privacy-policy.html">Privacy Policy</a>
-                    <a href="u-faqs.html">FAQs</a>
-                    <a href="u-funded.html">Funded</a>
+                    <a href="/pages/about-us.html">About Us</a>
+                    <a href="#">Terms of Sponsorship</a>
+                    <a href="#">Contact Us</a>
+                    <a href="#">Terms of Use</a>
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">FAQs</a>
+                    <a href="#">Funded</a>
+                    <a href="/pages/contact-us.html" class="nav-item item">Get Help</a>
             </div>
             <div class="sub">
                 <h5 class="sub-text">Subscribe</h5>
