--- a/pages/investors/contact.html
+++ b/pages/investors/contact.html
@@ -24,8 +24,8 @@
                 <a href="../homepage.html" class="item first">Home</a>
                 <a href="/pages/investors/i-dashboard.html" class="nav-item item">Dashboard</a>
                 <a href="../u-about-us.html" class="nav-item item">About Us</a>
-                <a href="../u-funded.html" class="nav-item item">Funded</a>
-                <a href="../pages/contact-us.html" class="nav-item item active">Get Help</a>
+                <a href="#" class="nav-item item">Funded</a>
+                <a href="#" class="nav-item item active">Get Help</a>
             </nav>
             <span class="hamm"><i class="fas ham fa-bars"></i></span>
         </div>
@@ -84,13 +84,14 @@
             </div>
             <div class="navigation">
                 <h2 class="navi">Navigation</h3>
-                    <a href="../u-about-us.html">About Us</a>
-                    <a href="../u-terms-of-sponsorship.html">Terms of Sponsorship</a>
-                    <a href="contact.html">Contact Us</a>
-                    <a href="../u-terms-of-use.html">Terms of Use</a>
-                    <a href="../u-privacy-policy.html">Privacy Policy</a>
-                    <a href="../u-faqs.html">FAQs</a>
-                    <a href="../u-funded.html">Funded</a>
+                    <a href="/pages/about-us.html">About Us</a>
+                    <a href="#">Terms of Sponsorship</a>
+                    <a href="#">Contact Us</a>
+                    <a href="#">Terms of Use</a>
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">FAQs</a>
+                    <a href="#">Funded</a>
+                    <a href="/pages/contact-us.html" class="nav-item item">Get Help</a>
             </div>
             <div class="sub">
                 <h5 class="sub-text">Subscribe</h5>
