--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -74,13 +74,14 @@
             </div>
             <div class="navigation">
                 <h2 class="navi">Navigation</h3>
-                    <a href="about-us.html">About Us</a>
-                    <a href="terms-of-sponsorship.html">Terms of Sponsorship</a>
-                    <a href="contact-us.html">Contact Us</a>
-                    <a href="terms-of-use.html">Terms of Use</a>
-                    <a href="privacy-policy.html">Privacy Policy</a>
-                    <a href="faqs.html">FAQs</a>
-                    <a href="funded.html">Funded</a>
+                    <a href="/pages/about-us.html">About Us</a>
+                    <a href="#">Terms of Sponsorship</a>
+                    <a href="#">Contact Us</a>
+                    <a href="#">Terms of Use</a>
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">FAQs</a>
+                    <a href="#">Funded</a>
+                    <a href="/pages/contact-us.html" class="nav-item item">Get Help</a>
             </div>
             <div class="sub">
                 <h5 class="sub-text">Subscribe</h5>
