--- a/pages/sign-up-gate.html
+++ b/pages/sign-up-gate.html
@@ -60,13 +60,14 @@
             </div>
             <div class="navigation">
                 <h2 class="navi">Navigation</h3>
-                    <a href="about-us.html">About Us</a>
-                    <a href="terms-of-sponsorship.html">Terms of Sponsorship</a>
-                    <a href="contact-us.html">Contact Us</a>
-                    <a href="terms-of-use.html">Terms of Use</a>
-                    <a href="privacy-policy.html">Privacy Policy</a>
-                    <a href="faqs.html">FAQs</a>
-                    <a href="funded.html">Funded</a>
+                    <a href="/pages/about-us.html">About Us</a>
+                    <a href="#">Terms of Sponsorship</a>
+                    <a href="#">Contact Us</a>
+                    <a href="#">Terms of Use</a>
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">FAQs</a>
+                    <a href="#">Funded</a>
+                    <a href="/pages/contact-us.html" class="nav-item item">Get Help</a>
             </div>
             <div class="sub">
                 <h5 class="sub-text">Subscribe</h5>
@@ -80,19 +81,17 @@
         <p class="copy">Copyright&copy;2020 FarmConnect. All Rights Reserved</p>
     </footer>
     <script>
-        (function(){
-            if (localStorage.getItem("farmconnectUser")){
-                let user = localStorage.getItem("farmdata");
-                user = JSON.parse(user);
-                if (user.role === "farmer"){
-                    window.location.href = "/pages/farmers/f-dashboard.html";
-                }else {
-                    window.location.href = "/pages/investors/i-dashboard.html";
-                }
-
-            }
-        })()
+        let localUser = localStorage.getItem('userData');
+        if (localUser) {
+        let user = JSON.parse(localUser);
+        if (user.role === 'farmer') {
+            window.location.href = '/pages/farmers/f-dashboard.html';
+        } else {
+            window.location.href = '/pages/investors/i-dashboard.html';
+        }
+        }
     </script>
+    <script src="../js/url.js"></script>
     <script src="../js/app.js"></script>
 </body>
 
