--- a/pages/farmers/apply-success.html
+++ b/pages/farmers/apply-success.html
@@ -20,7 +20,7 @@
             </div>
             <nav class="navbar animation2">
                 <a href="../../index.html" class="item first">Home</a>
-                <a href="../u-about-us.html" class="nav-item item">About Us</a>
+                <a href="../about-us.html" class="nav-item item">About Us</a>
                 <a href="#" class="nav-item item">Funded</a>
                 <a href="#" class="nav-item item">Get Help</a>
                 <!-- <a href="../sign-in.html" class="nav-button nav-item ">Sign In</a>
