--- a/pages/farmers/contact.html
+++ b/pages/farmers/contact.html
@@ -23,7 +23,7 @@
             <nav class="navbar animation2">
                 <a href="./f-dashboard.html" class="item first">Home</a>
                 <a href="/pages/farmers/f-dashboard.html" class="nav-item item">Dashboard</a>
-                <a href="../u-about-us.html" class="nav-item item">About Us</a>
+                <a href="../about-us.html" class="nav-item item">About Us</a>
                 <a href="#" class="nav-item item">Funded</a>
                 <a href="#" class="nav-item item active">Get Help</a>
             </nav>
