--- a/pages/farmers/f-product-detail - new.html
+++ b/pages/farmers/f-product-detail - new.html
@@ -22,7 +22,7 @@
             </div>
             <nav class="navbar animation3">
                 <a href="./f-dashboard.html" class="active item">Home</a>
-                <a href="../u-about-us.html" class="nav-item item">About Us</a>
+                <a href="../about-us.html" class="nav-item item">About Us</a>
                 <a href="#" class="nav-item item">Funded</a>
                 <a href="#" class="nav-item item">Get Help</a>
                 <a href="f-profile.html"><img class="profile-img" src="../../img/profile-img.svg" alt="profile-img" ></a>
