--- a/pages/farmers/f-product-detail.html
+++ b/pages/farmers/f-product-detail.html
@@ -18,11 +18,11 @@
     <header>
         <div class="nav-items">
             <div class="logo">
-                <a href="../../pages/homepage.html" class="logo"><img src="../../img/logoCrop.png"></a>
+                <a href="./f-dashboard.html" class="logo"><img src="../../img/logoCrop.png"></a>
             </div>
             <nav class="navbar animation3">
                 <a href="./f-dashboard.html" class="item first">Home</a>
-                <a href="../u-about-us.html" class="nav-item item">About Us</a>
+                <a href="../about-us.html" class="nav-item item">About Us</a>
                 <a href="#" class="nav-item item">Funded</a>
                 <a href="#" class="nav-item item">Get Help</a>
                 <a href="f-profile.html"><img class="profile-img" src="../../img/profile-img.svg" alt="profile-img"></a>
