--- a/pages/farmers/f-profile.html
+++ b/pages/farmers/f-profile.html
@@ -23,7 +23,7 @@
             </div>
             <nav class="navbar animation3">
                 <a href="./f-dashboard.html" class="item first">Home</a>
-                <a href="../u-about-us.html" class="nav-item item">About Us</a>
+                <a href="../about-us.html" class="nav-item item">About Us</a>
                 <a href="f-profile.html"><img class="profile-img" src="../../img/profile-img.svg" alt="profile-img"></a>
             </nav>
             <span class="hamm"><i class="fas ham fa-bars"></i></span>
