--- a/pages/investors/i-dashboard.html
+++ b/pages/investors/i-dashboard.html
@@ -17,11 +17,11 @@
     <header>
         <div class="nav-items">
             <div class="logo">
-                <a href="../../pages/homepage.html" class="logo"><img src="../../img/logoCrop.png"></a>
+                <a href="./i-dashboard.html" class="logo"><img src="../../img/logoCrop.png"></a>
             </div>
             <nav class="navbar animation3">
                 <a href="./i-dashboard.html" class="item first">Home</a>
-                <a href="../u-about-us.html" class="nav-item item">About Us</a>
+                <a href="../about-us.html" class="nav-item item">About Us</a>
                 <a href="#" class="nav-item item">Funded</a>
                 <a href="#" class="nav-item item">Get Help</a>
                 <a href=""><img class="note-img" src="../../img/bell.svg" alt="notification-img"></a>
@@ -114,7 +114,7 @@
         <p class="copy">Copyright&copy;2020 FarmConnect. All Rights Reserved</p>
     </footer>
     <div id="snackbar"></div>
-    <script>
+    <!-- <script>
         let user = localStorage.getItem("userData")
             if (!user) {
                 window.location.href = "../../index.html";
@@ -124,7 +124,7 @@
                     window.location.href = "/pages/farmers/f-dashboard.html";
                 }
             }
-    </script>
+    </script> -->
     <script src="../../js/url.js"></script>
     <script src="../../js/app.js"></script>
     <script src="../../js/i-dashboard.js"></script>
