--- a/pages/investors/i-products.html
+++ b/pages/investors/i-products.html
@@ -22,7 +22,7 @@
             </div>
             <nav class="navbar animation2">
                 <a href="./i-dashboard.html" class="item first">Home</a>
-                <a href="../u-about-us.html" class="nav-item item">About Us</a>
+                <a href="../about-us.html" class="nav-item item">About Us</a>
                 <a href="#" class="nav-item item">Funded</a>
                 <a href="#" class="nav-item item">Get Help</a>
                 <a href=""><img class="note-img" src="../../img/bell.svg" alt="notification-img"></a>
