--- a/pages/investors/invest-success.html
+++ b/pages/investors/invest-success.html
@@ -15,7 +15,7 @@
     <header>
         <div class="nav-items">
             <div class="logo">
-                <a href="index.html" class="logo"><img src="img/logoCrop"></a>
+                <a href="./i-dashboard.html" class="logo"><img src="img/logoCrop"></a>
             </div>
             <nav class="navbar animation2">
                 <a href="#index.html" class="active item">Home</a>
