--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -77,7 +77,7 @@
     </div>
     <div id="team-container">
       <div class="card">
-        <img src="../img/tolu.jpg" alt="Joshua" style="width:100%">
+        <img src="../img/photo.jpg" alt="Tolulope folorunso" >
         <div class="detail">
           <h4>Folorunso Tolulope</h4>
           <p class="title">Full Stack Developer</p>
@@ -89,10 +89,22 @@
       </div>
 
       <div class="card">
-        <img src="../img/tolu.jpg" alt="Joshua" style="width:100%">
+        <img src="../img/photo.jpg" alt="Nife" >
         <div class="detail">
-          <h4>Folorunso Tolulope</h4>
-          <p class="title">Full Stack Developer</p>
+          <h4>Nifemi</h4>
+          <p class="title">Frontend Developer</p>
+          <p class="title">CEO/Founder/Team lead</p>
+          <a href="#"><i class="fa fa-twitter soc"></i></a>
+          <a href="#"><i class="fa fa-linkedin soc"></i></a>
+          <a href="#"><i class="fa fa-facebook soc"></i></a>
+        </div>
+
+      </div>
+      <div class="card">
+        <img src="../img/photo.jpg" alt="Louis igbelina" >
+        <div class="detail">
+          <h4>Louis igbelina</h4>
+          <p class="title">Front end Developer</p>
           <p class="title">CEO/Founder</p>
           <a href="#"><i class="fa fa-twitter soc"></i></a>
           <a href="#"><i class="fa fa-linkedin soc"></i></a>
@@ -101,22 +113,32 @@
 
       </div>
       <div class="card">
-        <img src="../img/tolu.jpg" alt="Joshua" style="width:100%">
+        <img src="../img/photo.jpg" alt="Oluwatobiloba Kolade" >
         <div class="detail">
-          <h4>Folorunso Tolulope</h4>
-          <p class="title">Full Stack Developer</p>
+          <h4>Oluwatobiloba Kolade</h4>
+          <p class="title">Ui designer</p>
           <p class="title">CEO/Founder</p>
           <a href="#"><i class="fa fa-twitter soc"></i></a>
           <a href="#"><i class="fa fa-linkedin soc"></i></a>
           <a href="#"><i class="fa fa-facebook soc"></i></a>
         </div>
-
       </div>
       <div class="card">
-        <img src="../img/tolu.jpg" alt="Joshua" style="width:100%">
+        <img src="../img/photo.jpg" alt="Ayomide Agbaje" >
         <div class="detail">
-          <h4>Folorunso Tolulope</h4>
-          <p class="title">Full Stack Developer</p>
+          <h4>Ayomide Agbaje</h4>
+          <p class="title">UI/UX Designer</p>
+          <p class="title">CEO/Founder</p>
+          <a href="#"><i class="fa fa-twitter soc"></i></a>
+          <a href="#"><i class="fa fa-linkedin soc"></i></a>
+          <a href="#"><i class="fa fa-facebook soc"></i></a>
+        </div>
+      </div>
+      <div class="card">
+        <img src="../img/photo.jpg" alt="Peter Ogundana" >
+        <div class="detail">
+          <h4>Peter Ogundana</h4>
+          <p class="title">Ui/Ux designer</p>
           <p class="title">CEO/Founder</p>
           <a href="#"><i class="fa fa-twitter soc"></i></a>
           <a href="#"><i class="fa fa-linkedin soc"></i></a>
