--- a/pages/farmers/f-investors.html
+++ b/pages/farmers/f-investors.html
@@ -15,7 +15,7 @@
     <header>
         <div class="nav-items">
             <div class="logo">
-                <a href="index.html" class="logo"><img src="../../img/logoCrop.png"></a>
+                <a href="./f-dashboard.html" class="logo"><img src="../../img/logoCrop.png"></a>
             </div>
             <nav class="navbar animation2">
                 <a href="./f-dashboard.html" class="active item">Home</a>
