--- a/pages/farmers/register-success.html
+++ b/pages/farmers/register-success.html
@@ -16,11 +16,11 @@
     <header>
         <div class="nav-items">
             <div class="logo">
-                <a href="../../index.html" class="logo"><img src="../../img/logoCrop.png"></a>
+                <a href="/" class="logo"><img src="../../img/logoCrop.png"></a>
             </div>
             <nav class="navbar animation2">
-                <a href="../../index.html" class="active item">Home</a>
-                <a href="../u-about-us.html" class="nav-item item">About Us</a>
+                <a href="/" class="active item">Home</a>
+                <a href="../about-us.html" class="nav-item item">About Us</a>
                 <a href="#" class="nav-item item">Funded</a>
                 <a href="#" class="nav-item item">Get Help</a>
             </nav>
