--- a/pages/investors/i-product-detail - new.html
+++ b/pages/investors/i-product-detail - new.html
@@ -19,11 +19,11 @@
     <header>
         <div class="nav-items">
             <div class="logo">
-                <a href="../../pages/homepage.html" class="logo"><img src="../../img/logoCrop.png"></a>
+                <a href="./i-dashboard.html" class="logo"><img src="../../img/logoCrop.png"></a>
             </div>
             <nav class="navbar animation3">
-                <a href="../homepage.html" class="active item">Home</a>
-                <a href="../u-about-us.html" class="nav-item item">About Us</a>
+                <a href="./i-dashboard.html" class="active item">Home</a>
+                <a href="../about-us.html" class="nav-item item">About Us</a>
                 <a href="" class="nav-item item">Funded</a>
                 <a href="contact.html" class="nav-item item">Get Help</a>
                 <a href=""><img class="note-img" src="../../img/bell.svg" alt="notification-img"></a>
@@ -155,13 +155,14 @@
             </div>
             <div class="navigation">
                 <h2 class="navi">Navigation</h3>
-                    <a href="">About Us</a>
-                    <a href="">Terms of Sponsorship</a>
-                    <a href="">Contact Us</a>
-                    <a href="">Terms of Use</a>
-                    <a href="">Privacy Policy</a>
-                    <a href="">FAQs</a>
-                    <a href="">Funded</a>
+                     <a href="/pages/about-us.html">About Us</a>
+                    <a href="#">Terms of Sponsorship</a>
+                    <a href="#">Contact Us</a>
+                    <a href="#">Terms of Use</a>
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">FAQs</a>
+                    <a href="#">Funded</a>
+                    <a href="/pages/contact-us.html" class="nav-item item">Get Help</a>
             </div>
             <div class="sub">
                 <h5 class="sub-text">Subscribe</h5>
