--- a/pages/investors/i-profile.html
+++ b/pages/investors/i-profile.html
@@ -23,7 +23,7 @@
             </div>
             <nav class="navbar animation3">
                 <a href="./i-dashboard.html" class="item active">Home</a>
-                <a href="../u-about-us.html" class="nav-item item">About Us</a>
+                <a href="../about-us.html" class="nav-item item">About Us</a>
                 <a href="#" class="nav-item item">Funded</a>
                 <a href="#" class="nav-item item">Get Help</a>
                 <a href="i-profile.html"><img class="profile-img" src="../../img/profile-img.svg" alt="profile-img"></a>
@@ -69,7 +69,7 @@
                 <div class="form-input">
                     <div style="position: relative;">
                         <img src="../../img/profile-img.svg" id="profileImg" class="profile-img" alt="" style="height: 100px;width:100px; border-radius: 50%;border: 3px solid #ccc">
-                        <span style="font-size: 30px; cursor: pointer; position: absolute; bottom:0; right: 10px;">+</span>
+                        <!-- <span style="font-size: 30px; cursor: pointer; position: absolute; bottom:0; right: 10px;">+</span> -->
                     </div>
                     <div>
                         <label for="">Full Name</label>
