--- a/index.html
+++ b/index.html
@@ -77,23 +77,23 @@
         <h2 class="feature">Featured Products</h2>
         <div class="item-container">
             <div class="products-card">
-                <img src="img/rooster.png">
+                <img src="img/POULTRY-FARM-1.jpg">
                 <div class="desc">
-                    <h6 class="product-text">Alagbo Poultry</h6>
-                    <h6 class="amount">&#8358;1 Milion</p>
+                    <h6 class="product-text">Ijero Poultry farm</h6>
+                    <h6 class="amount">&#8358;17 Milion</p>
                 </div>
             </div>
             <div class="products-card">
-                <img src="img/cereal.png">
+                <img src="img/FARMERS.jpg">
                 <div class="desc">
-                    <h6 class="product-text">Egungun Rice Farm</h6>
-                    <h6 class="amount">&#8358;5 Million</p>
+                    <h6 class="product-text">Igbemo Rice Farm</h6>
+                    <h6 class="amount">&#8358;10 Million</p>
                 </div>
             </div>
             <div class="products-card">
-                <img src="img/fish.png">
+                <img src="img/ikun-farm.jpg">
                 <div class="desc">
-                    <h6 class="product-text">Express Fishery</h6>
+                    <h6 class="product-text">Ikun dairy farm</h6>
                     <h6 class="amount">&#8358;3.2 Million</h6>
                 </div>
             </div>
@@ -106,11 +106,10 @@
 
         <div class="test-card">
             <div class="details">
-                <img class="cauimg" src="img/testimonies.jpg" style="border-radius: 50%;">
-                <h3 class="dname">Folorunso Tolu</h3>
+                <img class="cauimg" src="img/farmer-1.png" style="border-radius: 50%;">
+                <h3 class="dname">Babajide Adejare</h3>
                 <p class="text">The idea behind FarmConnect is quite good. It has the potential to create jobs for lots
-                    of people. It
-                    is very easy to do business with them because everything takes place online. I would recommend them
+                    of people. It is very easy to do business with them because everything takes place online. I would recommend them
                     to others.</p>
             </div>
         </div>
