--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <section class="welcome">
         <div class="desktop-flex">
             <div class="show">
-                <h1>Welcome <br> To Your Dream <br> Come True</h1>
+                <h1>Welcome <br> To Your Dream <br> Come True <br> <span style="font-size: 0.9rem;">Connecting Ekiti farmers with investors</span></h1>
+
                 <div class="button-welcome">
                     <a href="pages/funded.html" class="success">Success Stories</a>
                 </div>
