--- a/pages/funded.html
+++ b/pages/funded.html
@@ -38,24 +38,24 @@
             <h1 class="head-form">Successfully Funded Products</h1>
             <div class="container">
                 <div class="products-card">
-                    <img src="https://res.cloudinary.com/josh4324/image/upload/v1590231909/rooster_p9h8td.png">
+                    <img src="../img/POULTRY-FARM-1.jpg">
                     <div class="desc">
-                        <h6 class="product-text">Alagbo Poultry</h6>
-                        <h6 class="amount">&#8358;1 Milion</p>
+                        <h6 class="product-text">Ijero Poultry farm</h6>
+                        <h6 class="amount">&#8358;17 Milion</p>
                     </div>
                 </div>
                 <div class="products-card">
-                    <img src="../img/cereal.png">
+                    <img src="../img/FARMERS.jpg">
                     <div class="desc">
-                        <h6 class="product-text">Egungun Rice Farm</h6>
-                        <h6 class="amount">&#8358;5 Million</p>
+                        <h6 class="product-text">Igbemo Rice Farm</h6>
+                        <h6 class="amount">&#8358;10 Million</p>
                     </div>
                 </div>
                 <div class="products-card">
-                    <img src="https://res.cloudinary.com/josh4324/image/upload/v1590231908/fish_yag5du.png">
+                    <img src="../img/ikun-farm.jpg">
                     <div class="desc">
                         <h6 class="product-text">Express Fishery</h6>
-                        <h6 class="amount">&#8358;3.2 Million</h6>
+                        <h6 class="amount">&#8358;67 Million</h6>
                     </div>
                 </div>
             </div>
